<resources>
    <string name="app_name">Note App</string>
    <string name="delete_note">DeleteANote</string>
    <string name="Updated_note_time">UpdateTime</string>
    <string name="create_note_fab">CreateANote</string>
    <string name="note_title">NoteTitle</string>
    <string name="note_description">NoteSampleDescription</string>
    <string name="save_note">Save Note</string>
    <string name="update_note">Update Note</string>
    <string name="note_title_hint">Enter Note Title</string>
    <string name="note_details">Note Details...</string>
    <string name="note_last_updated">Last Updated: %1$s</string>
    <string name="audio_menu_title">Audio</string>
    <string name="text_menu_title">Text</string>
    <string name="list_menu_title">List</string>
    <string name="image_menu_title">Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tap_mic_to_speak">Tap mic to speak</string>
</resources>