<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="@color/shade_1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <TextView
            android:id="@+id/tvNoteTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:padding="4dp"
            android:text="@string/note_title"
            android:textColor="@color/black_shade_1"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/ivDelete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvNoteTitle"
            android:layout_margin="3dp"
            android:layout_toStartOf="@id/ivDelete"
            android:padding="4dp"
            android:text="@string/Updated_note_time"
            android:textColor="@color/black_shade_1"
            android:textSize="13sp"
            app:layout_constraintEnd_toStartOf="@+id/ivDelete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNoteTitle" />

        <ImageView
            android:id="@+id/ivDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="3dp"
            android:contentDescription="@string/delete_note"
            android:padding="3dp"
            android:src="@drawable/icon_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>